--- a/componants/ItemCards/ItemCard.css
+++ b/componants/ItemCards/ItemCard.css
@@ -3,7 +3,8 @@ img
 {
 height: 153px;
 width: 151px;
-border: 1px black;
+border: 1px solid #EFEFEF;
+border-radius: 10px;
 }
 
 .category
@@ -24,8 +25,7 @@ color: #949494;
     height: 248px;
     display: flex;
     flex-direction: column;
-    margin: 10px;
-    padding: 10%;
+    margin: 30px;
 }
 
 
