--- a/componants/ItemCards/ItemCard.css
+++ b/componants/ItemCards/ItemCard.css
@@ -11,12 +11,19 @@ border-radius: 10px;
 {
 font-size: 10px;
 color: #949494;
+background-color: white;
 }
 
 .title
 {
     font-size: 12px;
     font-weight: bold;
+    background-color: white;
+}
+
+.price
+{
+    background-color: white;
 }
 
 .item-card
@@ -26,6 +33,11 @@ color: #949494;
     display: flex;
     flex-direction: column;
     margin: 30px;
+    background-color: white;
+    align-items: center;
+    border-radius: 10px;
+    border: solid 1px lightgrey;
+    box-shadow: 0 0 5px 0 #949494;
 }
 
 
