--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,8 @@ padding: 0;
 box-sizing: border-box;    
 height: auto;
 width: auto;
+background-color: #FAFAFA;
+;
 }
 .header 
 {
@@ -12,4 +14,5 @@ display: flex;
 justify-content: space-between;
 flex-direction: row;
 color: #3A4895;
+padding: 0 30px 70px 30px;
 }
