--- a/componants/ItemCards/ItemCard.css
+++ b/componants/ItemCards/ItemCard.css
@@ -19,6 +19,8 @@ background-color: white;
     font-size: 12px;
     font-weight: bold;
     background-color: white;
+    text-decoration: none;
+    color: black;
 }
 
 .price
