--- a/componants/Footer/footer.css
+++ b/componants/Footer/footer.css
@@ -1,13 +1,15 @@
 .foot-container
 {
     height: 66px;
-    width: auto;
+    width: 100%;
     background-color: #3A4895;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
     padding: 0 30px 0 30px;
+    position: absolute;
+    bottom: 0;
 }
 
 .foot-stuff
