--- a/componants/Footer/footer.css
+++ b/componants/Footer/footer.css
@@ -8,8 +8,8 @@
     justify-content: space-between;
     align-items: center;
     padding: 0 30px 0 30px;
-    position: absolute;
-    bottom: 0;
+    position:fixed;
+    bottom: 0; 
 }
 
 .foot-stuff
