--- a/pages/details/details.css
+++ b/pages/details/details.css
@@ -2,11 +2,11 @@
 .detail-container
 {
     display: flex;
-    height:400px ;
-    width: 50%;
+    height:600px ;
+    width: 55%;
     flex-direction: row;
     margin: auto;
-    background-color: antiquewhite;
+    background-color: white;
     justify-content: center;
     align-items: center;
 }
@@ -15,20 +15,58 @@
 {
     display: flex;
     text-align: center;
-    height: 300px;
+    height: 500px;
     flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: white;
 }
 
 .item-description
 {
     font-size: 16px;
-    height: 111px;
+    height: auto;
     width: 238px;
-
+    background-color: white;
 }
 
 .cart-add
 {
-    background-color: yellow;
-    
+background-color: yellow;
+height: 43px;
+width: 158px;
+color: black;
+font-size: 14px;
+margin: auto;
+font-weight: 700;
+}
+
+.the-word-description
+{
+    font-size: 20px;
+    font-weight: 600;
+}
+
+.detail-price
+{
+    font-size: 24px;
+    font-weight: 600;
+    margin: 31px 0 24px 0;
+}
+
+.detail-item
+{
+    font-size: 24px;
+    font-weight: 700;
+    background-color: white;
+}
+
+.detail-img
+{
+    height: 303px;
+    width: 215px;
+    border: none;
+    margin-right: 190px;
+    margin-left: 5%;
+
 }
